--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,26 @@ h1 {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
+
+.controls {
+    width: 60%;
+    background-color: #333;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.controls .btn {
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.controls .timestamp {
+    margin-left: 10px;
+    font-weight: bold;
+    color: #fff;
+}
