Add media query breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,9 @@ h1 {
     font-weight: bold;
     color: #fff;
 }
+
+@media (max-width: 800px) {
+    .screen, .controls {
+        width: 90%;
+    }
+}
