--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ h1 {
     color: #fff;
 }
 
+.btn:focus {
+    outline: 0;
+}
+
 @media (max-width: 800px) {
     .screen, .controls {
         width: 90%;
