--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Questrial:wght@700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -17,6 +17,7 @@ body {
 
 h1 {
     color: #fff;
+    font-size: 37px;
 }
 
 .screen {
